--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/form-autorizar-solicitud/form-autorizar-solicitud.component.html
@@ -1,3 +1,204 @@
+<section class="container text-center" *ngIf="contrato !== undefined">
+    <div class="text-right">
+        <a routerLink="/autorizarSolicitudDePago" mat-button color="primary" class="btn-regresar">
+            <img src="assets/img/icon/regresar.svg" alt="Regresar">
+        </a>
+    </div>
+    <h1 class="title-menu--h1">
+        Aprobar solicitud {{ contrato.solicitudPagoOnly.numeroSolicitud }}
+    </h1>
+    <ng-container *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === this.tipoSolicitudCodigo.contratoInterventoria || contrato.solicitudPagoOnly.tipoSolicitudCodigo === this.tipoSolicitudCodigo.contratoObra; else esOtrosCostos">
+        <p style="margin-top: 0.5em;" *ngIf="this.idGestion==1">
+            <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra">Tipo de solicitud: <b>Contratos de obra</b></span>
+            <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo de solicitud: <b>Contratos de interventoria</b></span>
+        </p>
+
+        <mat-card class="shipping-card var-main-gris">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra">Contratos de obra</span>
+                    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Contratos de interventoria</span>
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <!-- <p><strong>Modalidad del contrato:</strong> {{ getModalidadContrato( contrato.modalidadCodigo ) }} </p> -->
+                <p><strong>Número de contrato:</strong> {{ contrato.numeroContrato }} </p>
+            </mat-card-content>
+        </mat-card>
+
+        <mat-card class="shipping-card var-main-gris">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    {{ contrato.numeroContrato }}
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <div class="chartGen">
+                    <div class="chart1">
+                        <p><strong>Nombre de entidad contratista:</strong> {{ contrato.contratacion.contratista.nombre }} </p>
+                        <p><strong>Fecha de inicio del contrato:</strong> {{ contrato.contratoPoliza[0]?.fechaAprobacion | date: 'dd/MM/yyyy' }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 1 - Preconstruccion: Meses:</strong> {{ contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
+                    </div>
+                    <div class="chart2">
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses + contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias + contrato.plazoFase2ConstruccionDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
+                        <p><strong>Fecha fin del contrato:</strong> {{ contrato.fechaTerminacionFase2 | date: 'dd/MM/yyyy' }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
+                    </div>
+                </div>
+                <h2 class="card-subTitle">DRP</h2>
+                <div class="table-responsive">
+                    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                        <ng-container matColumnDef="drp">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
+                            <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
+                        </ng-container>
+                        <ng-container matColumnDef="numDrp">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp }} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="valor">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="saldo">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
+                            <td mat-cell *matCellDef="let element" align="center"> Viene del CU Generar documento de registro presupuestal de alli viene el saldo inicial </td>
+                        </ng-container>
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+                </div>
+                <div class="tabs--actions"  style="margin-top: 1em;">
+                    <button mat-raised-button color="accent" class="tabs--btn auxBtn"
+                        (click)="openProyectosAsociados()">
+                        Ver proyectos asociados
+                    </button>
+                </div>
+            </mat-card-content>
+        </mat-card>
+
+        <div class="text-center">
+            <p class="info-container">
+                <span class="info-text sin-diligenciar">Sin diligenciar</span>
+                <span class="info-text en-proceso">En proceso</span>
+                <span class="info-text completo">Completo</span>
+            </p>
+        </div>
+
+        <mat-accordion>
+            <mat-expansion-panel class="expansion-style">
+                <mat-expansion-panel-header class="expansion-style--header">
+                    <mat-panel-title class="expansion-style--title sin-diligenciar">
+                        Cargar forma de pago
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+                <app-obs-cargar-formpago-autoriz [solicitudPago]="contrato.solicitudPagoOnly"></app-obs-cargar-formpago-autoriz>
+                <!--
+                    <app-obs-cargar-forma-pago [solicitudPago]="contrato.solicitudPagoOnly"></app-obs-cargar-forma-pago>
+                -->
+            </mat-expansion-panel>
+            <mat-expansion-panel class="expansion-style">
+                <mat-expansion-panel-header class="expansion-style--header">
+                    <mat-panel-title class="expansion-style--title sin-diligenciar">
+                        Registrar solicitud de pago
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <!--
+                    <app-obs-registrar-solicitud-pago [contrato]="contrato"></app-obs-registrar-solicitud-pago>
+                -->
+            </mat-expansion-panel>
+            <mat-expansion-panel class="expansion-style">
+                <mat-expansion-panel-header class="expansion-style--header">
+                    <mat-panel-title class="expansion-style--title en-alerta">
+                        Validar lista de chequeo
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <div style="margin-top: 1em;">
+                    <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
+                        Este acordeón consume información de la funcionalidad Listas de chequeó.
+                    </div>
+                </div>
+            </mat-expansion-panel>
+        </mat-accordion>
+    </ng-container>
+    <ng-template #esOtrosCostos>
+        <mat-card class="shipping-card">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text">
+                    Otros costos y servicios
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <p><strong>Número de contrato:</strong> {{ contrato.numeroContrato }} </p>
+                <p><strong>Número de radicado SAC:</strong> {{ otrosCostosForm.get( 'numeroRadicadoSAC' ).value }} </p>
+                <p><strong>Número de factura:</strong> {{ otrosCostosForm.get( 'numeroFactura' ).value }} </p>
+                <p><strong>Valor facturado:</strong> ${{ otrosCostosForm.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                <p><strong>Tipo de pago:</strong> {{ otrosCostosForm.get( 'tipoPago' ).value.nombre }} </p>
+            </mat-card-content>
+        </mat-card>
+    </ng-template>
+    <mat-accordion>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                    Soporte de la solicitud
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-card class="shipping-card var-main-gris">
+                <mat-card-header class="header-card header-card--margin">
+                    <mat-card-title class="header-card--text textoGris">
+                        Soporte de la solicitud de pago
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content style="text-align: left;">
+                    <p><strong>URL con soporte:</strong> {{ contrato.solicitudPagoOnly.solicitudPagoSoporteSolicitud[0].urlSoporte }} </p>
+                </mat-card-content>
+            </mat-card>
+
+            <!--
+            <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+                <div class="row mtop justCenter">
+                    <div class="col-md-5">
+                        <label class="label-left">¿Desde la supervisión tiene observaciones a el soporte de la solicitud?</label>
+                    </div>
+                    <div class="col-md-2">
+                        <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
+                            formControlName="tieneObservaciones">
+                            <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
+                            <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
+                        </mat-radio-group>
+                        <span class="required-form-group" style="margin-left: 1px;">*</span>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
+                    <div class="text-area-quill izqTitle">
+                        <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a el soporte de la solicitud</label>
+                        <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+                            (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
+                    </div>
+                    <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
+                        {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+                    </span>
+                    <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null">
+                        1000
+                    </span>
+                </div>
+                <button mat-button color="warn" class="btn-guardar"
+                    type="submit">
+                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
+                </button>
+            </form>
+            -->
+        </mat-expansion-panel>
+    </mat-accordion>
+</section>
+
+<!--
+    A partir de la linea 194 se eliminara el bloque de codigo
+-->
 <section class="container text-center">
     <div class="text-right">
         <a routerLink="/autorizarSolicitudDePago" mat-button color="primary" class="btn-regresar">
