--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -10,22 +10,6 @@
       <p><strong>Número de factura:</strong> {{ addressForm.get( 'numeroFactura' ).value }} </p>
       <p><strong>Fecha de factura:</strong> {{ addressForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }} </p>
       <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
-
-      <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
-
-      <p style="margin-top: 10px;" *ngIf="addressForm.get( 'aplicaDescuento' ).value === true"><strong>¿Aplican descuentos?: </strong> Si </p>
-      <p style="margin-top: 10px;" *ngIf="addressForm.get( 'aplicaDescuento' ).value === false"><strong>¿Aplican descuentos?: </strong> No </p>
-      <p *ngIf="addressForm.get( 'aplicaDescuento' ).value === true"><strong>¿Cuántos descuentos se aplican sobre la factura?:</strong> {{ descuentos.length }} </p>
-      <section *ngIf="descuentos.length > 0">
-        <div *ngFor="let descuento of descuentos.controls; index as i" [formGroup]="descuento">
-          <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; margin-top: 1em;">
-            Descuento {{ i + 1 }}
-          </mat-card-title>
-          <p><strong>Tipo de descuento:</strong> {{ getTipoDescuento( descuento.get( 'tipoDescuentoCodigo' ).value ) }} </p>
-          <p><strong>Valor del descuento:</strong> ${{ descuento.get( 'valorDescuento' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-        </div>
-        <p><strong>Valor a pagar después de descuentos:</strong> ${{ addressForm.get( 'valorAPagarDespues' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-      </section>
     </mat-card-content>
   </mat-card>
 </ng-container>
@@ -75,123 +59,127 @@
         </div>
         <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
 
-        <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
-        <div class="row">
-          <div class="col-md-8">
-            <div class="row">
-              <div class="pr-1">
-                <label class="label-left" for="aplicaDescuento">¿Aplican descuentos?</label>
-              </div>
-              <div class="col">
-                <mat-radio-group class="radioInput" formControlName="aplicaDescuento" required>
-                  <mat-radio-button [value]="true">Sí</mat-radio-button>
-                  <mat-radio-button [value]="false">No</mat-radio-button>
-                </mat-radio-group>
-                <span class="required-form-group" style="margin-left: 1px;">*</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row" *ngIf="addressForm.get( 'aplicaDescuento' ).value === true">
-          <div class="col-md-10">
-            <div class="row">
-              <div class="pr-1">
-                <label class="label-left" for="aplicaDescuento">¿Cuántos descuentos se aplican sobre la factura?</label>
-              </div>
-              <div class="col d-flex">
-                <mat-form-field style="width: 30%;">
-                  <input matInput type="text" maxlength="2" formControlName="numeroDescuentos" (ngModelChange)="validateNumber( $event )" required>
-                </mat-form-field>
-                <span class="contador">{{2 - addressForm.get( 'numeroDescuentos' ).value.length}}</span>   
-              </div>
-            </div>
-          </div>
-        </div>
-        <section formArrayName="descuentos" *ngIf="descuentos.length > 0">
-          <div *ngFor="let descuento of descuentos.controls; index as i" [formGroup]="descuento">
-            <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; margin-top: 1em;">
-              Descuento {{ i + 1 }}
-            </mat-card-title>
+        <!--
+            Se comenta el formulario de descuentos 'fix diseño' cualquier novedad restaurar codigo comentado
+
+            <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
             <div class="row">
               <div class="col-md-8">
                 <div class="row">
                   <div class="pr-1">
-                    <label class="label-left" for="tipoDescuento">Tipo de descuento</label>
+                    <label class="label-left" for="aplicaDescuento">¿Aplican descuentos?</label>
                   </div>
                   <div class="col">
-                    <mat-form-field class="select-width">
-                      <mat-select formControlName="tipoDescuentoCodigo" required>
-                        <mat-option *ngFor="let tipoDescuento of tiposDescuentoArray" [value]="tipoDescuento.codigo">
-                          {{ tipoDescuento.nombre }}
-                        </mat-option>
-                      </mat-select>
-                    </mat-form-field>
+                    <mat-radio-group class="radioInput" formControlName="aplicaDescuento" required>
+                      <mat-radio-button [value]="true">Sí</mat-radio-button>
+                      <mat-radio-button [value]="false">No</mat-radio-button>
+                    </mat-radio-group>
+                    <span class="required-form-group" style="margin-left: 1px;">*</span>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="row">
+            <div class="row" *ngIf="addressForm.get( 'aplicaDescuento' ).value === true">
+              <div class="col-md-10">
+                <div class="row">
+                  <div class="pr-1">
+                    <label class="label-left" for="aplicaDescuento">¿Cuántos descuentos se aplican sobre la factura?</label>
+                  </div>
+                  <div class="col d-flex">
+                    <mat-form-field style="width: 30%;">
+                      <input matInput type="text" maxlength="2" formControlName="numeroDescuentos" (ngModelChange)="validateNumber( $event )" required>
+                    </mat-form-field>
+                    <span class="contador">{{2 - addressForm.get( 'numeroDescuentos' ).value.length}}</span>   
+                  </div>
+                </div>
+              </div>
+            </div>
+            <section formArrayName="descuentos" *ngIf="descuentos.length > 0">
+              <div *ngFor="let descuento of descuentos.controls; index as i" [formGroup]="descuento">
+                <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; margin-top: 1em;">
+                  Descuento {{ i + 1 }}
+                </mat-card-title>
+                <div class="row">
+                  <div class="col-md-8">
+                    <div class="row">
+                      <div class="pr-1">
+                        <label class="label-left" for="tipoDescuento">Tipo de descuento</label>
+                      </div>
+                      <div class="col">
+                        <mat-form-field class="select-width">
+                          <mat-select formControlName="tipoDescuentoCodigo" required>
+                            <mat-option *ngFor="let tipoDescuento of tiposDescuentoArray" [value]="tipoDescuento.codigo">
+                              {{ tipoDescuento.nombre }}
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-8">
+                    <div class="row">
+                      <div class="pr-1">
+                        <label class="label-left" for="valorDescuento">
+                          Valor del descuento
+                        </label>
+                      </div>
+                      <div class="col d-flex">
+                        <mat-form-field class="full-width">
+                          <input matInput #valorDescuento currencyMask maxlength="20" required formControlName="valorDescuento"
+                            (keypress)="validateNumberKeypress($event)"
+                            onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                            (ngModelChange)="totalPagoDescuentos()"
+                            [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
+                        </mat-form-field>
+                        <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
+                          matTooltipClass="info-tooltip">{{20 - valorDescuento.value.length}}</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="text-right" *ngIf="i === descuentos.length - 1">
+                  <button mat-button color="warn" type="button" class="btn-eliminar" (click)="addDescuento()">
+                    <img src="assets/img/icon/mas.svg" alt="agregar">
+                    Agregar otro descuento
+                  </button>
+                </div>
+                <div class="text-right" *ngIf="descuentos.length > 1">
+                  <button mat-button color="warn" type="button" class="btn-eliminar" (click)="deleteDescuento( i, descuento.get( 'solicitudPagoFaseFacturaDescuentoId' ).value )">
+                    <img src="assets/img/icon/menos.svg">
+                    Eliminar descuento
+                  </button>
+                </div>
+              </div>
+            </section>
+            <div class="row" *ngIf="descuentos.length > 0">
               <div class="col-md-8">
                 <div class="row">
                   <div class="pr-1">
-                    <label class="label-left" for="valorDescuento">
-                      Valor del descuento
+                    <label class="label-left" for="valorAPagarDespues">
+                      Valor a pagar después de descuentos
                     </label>
                   </div>
                   <div class="col d-flex">
                     <mat-form-field class="full-width">
-                      <input matInput #valorDescuento currencyMask maxlength="20" required formControlName="valorDescuento"
-                        (keypress)="validateNumberKeypress($event)"
+                      <input matInput #valorAPagarDespues currencyMask maxlength="20" required
+                        formControlName="valorAPagarDespues" (keypress)="validateNumberKeypress($event)"
                         onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                        (ngModelChange)="totalPagoDescuentos()"
                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                     </mat-form-field>
                     <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
-                      matTooltipClass="info-tooltip">{{20 - valorDescuento.value.length}}</span>
+                      matTooltipClass="info-tooltip">{{20 - valorAPagarDespues.value.length}}</span>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="text-right" *ngIf="i === descuentos.length - 1">
-              <button mat-button color="warn" type="button" class="btn-eliminar" (click)="addDescuento()">
-                <img src="assets/img/icon/mas.svg" alt="agregar">
-                Agregar otro descuento
-              </button>
-            </div>
-            <div class="text-right" *ngIf="descuentos.length > 1">
-              <button mat-button color="warn" type="button" class="btn-eliminar" (click)="deleteDescuento( i, descuento.get( 'solicitudPagoFaseFacturaDescuentoId' ).value )">
-                <img src="assets/img/icon/menos.svg">
-                Eliminar descuento
-              </button>
-            </div>
-          </div>
-        </section>
-        <div class="row" *ngIf="descuentos.length > 0">
-          <div class="col-md-8">
-            <div class="row">
-              <div class="pr-1">
-                <label class="label-left" for="valorAPagarDespues">
-                  Valor a pagar después de descuentos
-                </label>
-              </div>
-              <div class="col d-flex">
-                <mat-form-field class="full-width">
-                  <input matInput #valorAPagarDespues currencyMask maxlength="20" required
-                    formControlName="valorAPagarDespues" (keypress)="validateNumberKeypress($event)"
-                    onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                    [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
-                </mat-form-field>
-                <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
-                  matTooltipClass="info-tooltip">{{20 - valorAPagarDespues.value.length}}</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        -->
       </mat-card-content>
     </mat-card>
     <div class="text-center mb-2em">
       <button mat-button color="warn" class="btn-guardar" type="submit">
-        <img src="assets/img/icon/guardar.svg" alt="Regresar">
+        <img src="assets/img/icon/guardar.svg">
       </button>
     </div>
   </form>
