--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/detalle-balance-gbftrec/detalle-balance-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/detalle-balance-gbftrec/detalle-balance-gbftrec.component.html
@@ -4,7 +4,7 @@
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
-    <h1 class="title-menu--h1">Ver detalle/Editar validación balance LL457326</h1>
+    <h1 class="title-menu--h1">Ver detalle validación balance LL457326</h1>
     <p class="info-sub-title">
         <span>Número de contrato de obra: <b>N801801</b></span>
         <span>Número de contrato de interventoría: <b>A513513</b></span>
@@ -34,5 +34,21 @@
     </div>
     <app-recursos-comprom-pagados-gbftrec *ngIf="opcion1"></app-recursos-comprom-pagados-gbftrec>
     <app-ejecucion-financiera-gbftrec *ngIf="opcion2"></app-ejecucion-financiera-gbftrec>
-    <app-traslado-recursos-gbftrec *ngIf="opcion3"></app-traslado-recursos-gbftrec>
+    <div *ngIf="opcion3">
+        <div align="left">
+            <mat-card class="shipping-card mainGris">
+                <mat-card-header class="header-card header-card--margin">
+                    <mat-card-title class="header-card--text textoGris">
+                        Validación de balance financiero
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <p><b>09/01/2021</b></p>
+                    <p><b>¿Se requiere registrar un traslado de recursos entre los aportantes y fuentes que financian
+                            este proyecto, antes de aprobar el
+                            balance financiero?:</b><em>No</em></p>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
 </section>
