--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
@@ -58,7 +58,7 @@
               type="button"
               (click)="openDialogTipoDocumento(element)"
             >
-              Tipo de documento
+              Ver detalle
             </button>
           </td>
         </ng-container>
