--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-proyecto/tabla-informe-final-proyecto.component.html
@@ -94,7 +94,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
         <a
-          
+        *ngIf="element.estadoInformeCod === '1' || element.estadoInformeCod === '2' || element.estadoInformeCod === '0'"
           mat-button
           mat-raised-button
           color="accent"
@@ -138,6 +138,7 @@
           color="accent"
           class="btn-table"
           type="button"
+          (click)="enviarRegistroFinal(element.proyectoId)"
         >
         Enviar informe a validación
       </button>
