--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -11,7 +11,7 @@
         <ng-container matColumnDef="No">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
           <td mat-cell *matCellDef="let element">
-            <b>{{ element.No }}</b>
+            <b>{{ element.informeFinalListaChequeoId }}</b>
           </td>
         </ng-container>
   
@@ -19,7 +19,7 @@
         <ng-container matColumnDef="item">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Ítem</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.item }}
+            {{ element.informeFinalListaChequeo.nombre }}
           </td>
         </ng-container>
   
@@ -27,7 +27,7 @@
         <ng-container matColumnDef="calificacionInterventoria">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación interventoría</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.calificacionInterventoria }}
+            {{ element.calificacionCodigo }}
           </td>
         </ng-container>
   
@@ -35,7 +35,9 @@
         <ng-container matColumnDef="tipoAnexo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.tipoAnexo }}
+            <div *ngIf="element.calificacionCodigo === '1'">
+              {{ element.informeFinalAnexo.tipoAnexo }}
+            </div>
           </td>
         </ng-container>
   
@@ -43,7 +45,12 @@
         <ng-container matColumnDef="Ubicacion">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación (url/radicado)</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.Ubicacion }}
+            <div *ngIf="element.calificacionCodigo === '1'">
+              <!--Físico-->
+              <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">{{ element.informeFinalAnexo.numRadicadoSac }} / {{ element.informeFinalAnexo.fechaRadicado | date:'dd/MM/yyyy'}} </span>
+              <!--Digital-->
+              <span *ngIf="element.informeFinalAnexo.tipoAnexo === '2'">{{ element.informeFinalAnexo.urlSoporte }}</span>
+            </div>
           </td>
         </ng-container>
   
@@ -53,8 +60,8 @@
           <td mat-cell *matCellDef="let element">
             <section class="slect-table-contain mt-1em">
               <mat-form-field class="select-width">
-                <mat-label>{{ element.verificacionString }}</mat-label>
-                <mat-select [(ngModel)]="element.verificacion" required>
+                <mat-label *ngIf="element.validacionCodigo != null">{{ element.validacionCodigo }}</mat-label>
+                <mat-select [(ngModel)]="element.verificacion" (selectionChange)="select(element)" required>
                   <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
                     {{ estado.name }}
                   </mat-option>
@@ -79,7 +86,7 @@
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestionar</th>
           <td mat-cell *matCellDef="let element">
-            <button
+            <!--<button
               *ngIf="element.verificacion === 'Cumple' || element.verificacion === 1"
               mat-button
               color="warn"
@@ -87,7 +94,6 @@
               color="accent"
               class="btn-table animatedOpacity"
               type="button"
-              (click)="openDialogTipoDocumento(element)"
             >
               <span *ngIf="element.informeFinalAnexoId == null || element.informeFinalAnexoId == 0">
                 Tipo de documento
@@ -95,9 +101,9 @@
               <span *ngIf="element.informeFinalAnexoId != null && element.informeFinalAnexoId > 0">
                 Ver detalle/ Editar
               </span>
-            </button>
+            </button>-->
             <button
-              *ngIf="element.verificacion === 'No cumple' || element.verificacion === 2"
+              *ngIf="element.validacionCodigo === '2' || element.verificacion === '2'"
               mat-button
               color="warn"
               mat-raised-button
