--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -11,12 +11,12 @@
 <div class="table-responsive mb-2em">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- fechaEnvio Column -->
-    <ng-container matColumnDef="fechaEnvio">
+    <ng-container matColumnDef="fechaCreacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Fecha de envío del informe final
       </th>
       <td mat-cell *matCellDef="let element">
-        <b>{{ element.fechaEnvio }}</b>
+        <b>{{ element.fechaCreacion  | date:'dd/MM/yyyy' }}</b>
       </td>
     </ng-container>
 
@@ -25,7 +25,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Llave MEN
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.llaveMen }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.llaveMen }}</td>
     </ng-container>
 
     <!-- tipoIntervencion Column -->
@@ -33,7 +33,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Tipo de intervención
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.tipoIntervencion }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.tipoIntervencionString }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
@@ -42,7 +42,7 @@
         Institución Educativa
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.institucionEducativa }}
+        {{ element.proyecto.institucionEducativa.nombre }}
       </td>
     </ng-container>
 
@@ -51,49 +51,99 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Sede
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.sedeEducativa }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.proyecto.sede.nombre }}</td>
     </ng-container>
 
     <!-- estadoVerificacion Column -->
-    <ng-container matColumnDef="estadoVerificacion">
+    <ng-container matColumnDef="estadoValidacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado de la verificación
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.estadoVerificacion }}
+        {{ element.estadoValidacion }}
       </td>
     </ng-container>
 
     <!-- registroCompleto Column -->
-    <ng-container matColumnDef="registroCompleto">
+    <ng-container matColumnDef="registroCompletoValidacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Estado del registro
       </th>
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="element.registroCompleto === 'Incompleto'"
-          [class.completo]="element.registroCompleto === true"
+          [class.sin-diligenciar]="element.registroCompletoValidacion === 'Incompleto'"
+          [class.completo]="element.registroCompletoValidacion === true"
         ></span>
-        {{ element.registroCompleto }}
+        <span
+        *ngIf="element.registroCompletoValidacion"
+         >
+         Completo
+      </span>
+      <span
+      *ngIf="!element.registroCompletoValidacion"
+       >
+       Incompleto
+    </span>
       </td>
     </ng-container>
 
     <!-- contratacionProyectoId Column -->
-    <ng-container matColumnDef="contratacionProyectoId">
+    <ng-container matColumnDef="proyectoId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Gestión
       </th>
       <td mat-cell *matCellDef="let element">
-        <a
+        <a *ngIf="element.estadoValidacion === '0'"
           mat-button
           mat-raised-button
           color="accent"
           class="btn-table"
-          [routerLink]="['verificar', element.contratacionProyectoId]"
+          [routerLink]="['verificar', element.proyectoId]"
         >
-          Verificar informe
+          Validar informe
         </a>
+        <a *ngIf="element.estadoValidacion === '1' || element.estadoValidacion === '2'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          [routerLink]="['verificar', element.proyectoId]"
+        >
+          Ver detalle/Editar
+        </a>
+        <a
+        *ngIf="element.estadoValidacion === '3'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          [routerLink]="['verDetalle', element.proyectoId]"
+        >
+          Ver detalle
+        </a>
+        <button
+        *ngIf="(element.estadoValidacion === '1' || element.estadoValidacion === '2') && element.registroCompletoValidacion"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+          (click)="enviarRegistroFinal(element.proyectoId)"
+        >
+        Enviar informe a validación
+      </button>
+       <button
+       *ngIf="element.estadoInformeCod === '4'"
+          mat-button
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          type="button"
+        >
+        Ver observaciones de supervisor
+      </button>
       </td>
     </ng-container>
 
