--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
@@ -56,7 +56,7 @@
               color="accent"
               class="btn-table animatedOpacity"
               type="button"
-              (click)="openDialogTipoDocumento(element)"
+              (click)="openDialogTipoDocumento(element, true)"
             >
               Ver detalle
             </button>
