--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-datos-factura/obs-datos-factura.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-datos-factura/obs-datos-factura.component.html
@@ -1,77 +1,82 @@
-<mat-card class="shipping-card">
-    <mat-card-header class="header-card header-card--margin">
-      <mat-card-title class="header-card--text">
-        Datos
-      </mat-card-title>
-    </mat-card-header>
-    <mat-card-content style="text-align: left;">
-      <h2 class="card-subTitle">Descripción de la factura</h2>
-      <p><strong>Número de factura:</strong> {{ detalleForm.get( 'numeroFactura' ).value }} </p>
-      <p><strong>Fecha de factura:</strong> {{ detalleForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }} </p>
-      <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
-
-      <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
-
-      <p style="margin-top: 10px;" *ngIf="detalleForm.get( 'aplicaDescuento' ).value === true"><strong>¿Aplican descuentos?: </strong> Si </p>
-      <p style="margin-top: 10px;" *ngIf="detalleForm.get( 'aplicaDescuento' ).value === false"><strong>¿Aplican descuentos?: </strong> No </p>
-      <p *ngIf="detalleForm.get( 'aplicaDescuento' ).value === true"><strong>¿Cuántos descuentos se aplican sobre la factura?:</strong> {{ descuentos.length }} </p>
-      <section *ngIf="descuentos.length > 0">
-        <div *ngFor="let descuento of descuentos.controls; index as i" [formGroup]="descuento">
-          <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; margin-top: 1em;">
-            Descuento {{ i + 1 }}
-          </mat-card-title>
-          <p><strong>Tipo de descuento:</strong> {{ getTipoDescuento( descuento.get( 'tipoDescuentoCodigo' ).value ) }} </p>
-          <p><strong>Valor del descuento:</strong> ${{ descuento.get( 'valorDescuento' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-        </div>
-        <p><strong>Valor a pagar después de descuentos:</strong> ${{ detalleForm.get( 'valorAPagarDespues' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-      </section>
-    </mat-card-content>
-</mat-card>
-<ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-    <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
+<section *ngIf="solicitudPago !== undefined">
+    <mat-card class="shipping-card">
         <mat-card-header class="header-card header-card--margin">
-            <mat-card-title class="header-card--text textoGris">
-                Observación de la supervisión
-            </mat-card-title>
+          <mat-card-title class="header-card--text">
+            Datos
+          </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left;">
-            <p><b>07/10/2020</b></p>
-            <p><b>¿Desde la supervisión tiene observaciones a los datos de la factura?:</b> Sí</p>
-            <p>La factura debe ser la FAC00450</p>
+          <h2 class="card-subTitle">Descripción de la factura</h2>
+          <p><strong>Número de factura:</strong> {{ detalleForm.get( 'numeroFactura' ).value }} </p>
+          <p><strong>Fecha de factura:</strong> {{ detalleForm.get( 'fechaFactura' ).value | date: 'dd/MM/yyyy' }} </p>
+          <p style="margin-top: 10px;"><strong>Valor facturado: </strong> ${{ valorFacturado | currency:' ':'symbol-narrow':'.0-0' }} </p>
+    
+            <!--
+                Se comenta el detalle de los descuentos en los datos de la factura... Atento a cualquier novedad 'Carlos Molero'
+    
+                <h2 class="card-subTitle">Descuentos dirección técnica asociados a la factura</h2>
+                <p style="margin-top: 10px;" *ngIf="detalleForm.get( 'aplicaDescuento' ).value === true"><strong>¿Aplican descuentos?: </strong> Si </p>
+                <p style="margin-top: 10px;" *ngIf="detalleForm.get( 'aplicaDescuento' ).value === false"><strong>¿Aplican descuentos?: </strong> No </p>
+                <p *ngIf="detalleForm.get( 'aplicaDescuento' ).value === true"><strong>¿Cuántos descuentos se aplican sobre la factura?:</strong> {{ descuentos.length }} </p>
+                <section *ngIf="descuentos.length > 0">
+                  <div *ngFor="let descuento of descuentos.controls; index as i" [formGroup]="descuento">
+                    <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; margin-top: 1em;">
+                      Descuento {{ i + 1 }}
+                    </mat-card-title>
+                    <p><strong>Tipo de descuento:</strong> {{ getTipoDescuento( descuento.get( 'tipoDescuentoCodigo' ).value ) }} </p>
+                    <p><strong>Valor del descuento:</strong> ${{ descuento.get( 'valorDescuento' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                  </div>
+                  <p><strong>Valor a pagar después de descuentos:</strong> ${{ detalleForm.get( 'valorAPagarDespues' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                </section>
+            -->
         </mat-card-content>
     </mat-card>
-</ng-container>
-<ng-template #noEsVerDetalle>
-    <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-        <div class="row mtop justCenter">
-            <div class="col-md-7">
-                <label class="label-left">¿Desde la supervisión tiene observaciones a los datos de la factura?</label>
+    <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observación de la supervisión
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <p><b>07/10/2020</b></p>
+                <p><b>¿Desde la supervisión tiene observaciones a los datos de la factura?:</b> Sí</p>
+                <p>La factura debe ser la FAC00450</p>
+            </mat-card-content>
+        </mat-card>
+    </ng-container>
+    <ng-template #noEsVerDetalle>
+        <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+            <div class="row mtop justCenter">
+                <div class="col-md-7">
+                    <label class="label-left">¿Desde la supervisión tiene observaciones a los datos de la factura?</label>
+                </div>
+                <div class="col-md-2">
+                    <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
+                        formControlName="tieneObservaciones">
+                        <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
+                        <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
+                    </mat-radio-group>
+                    <span class="required-form-group" style="margin-left: 1px;">*</span>
+                </div>
             </div>
-            <div class="col-md-2">
-                <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
-                    formControlName="tieneObservaciones">
-                    <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
-                    <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
-                </mat-radio-group>
-                <span class="required-form-group" style="margin-left: 1px;">*</span>
+            <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
+                <div class="text-area-quill izqTitle">
+                    <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a los datos de la factura</label>
+                    <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+                        (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
+                </div>
+                <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
+                    {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+                </span>
+                <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null">
+                    1000
+                </span>
             </div>
-        </div>
-        <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
-            <div class="text-area-quill izqTitle">
-                <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a los datos de la factura</label>
-                <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                    (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
-            </div>
-            <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
-                {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
-            </span>
-            <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null">
-                1000
-            </span>
-        </div>
-        <button mat-button color="warn" class="btn-guardar"
-            type="submit">
-            <img src="assets/img/icon/guardar.svg" alt="Guardar">
-        </button>
-    </form>
-</ng-template>
+            <button mat-button color="warn" class="btn-guardar"
+                type="submit">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
+            </button>
+        </form>
+    </ng-template>
+</section>
